# go-web

./: .Dockerfile  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  go.mod  main.go  transitions.css
handlers/: base.go  landing.go
html/: index.html  landing.html
html/pages/: about.html  blog.html
html/pages/landing/: index.html  musician.html  projects.html
html/templates/: about.html  blog.html  project.html  projects.html
logic/routes/: middleware.go  routes.go
logic/views/: projects.go
migrations/: 20240514214419_init.down.sql  20240514214419_init.up.sql
public/assets/: particles.json
public/assets/portfolio/: ai_language_server.md  deathwish.md  espionox.md  lovetogether.md  prattl.md  semperflies.md
public/html/: index.html  layout.html
public/html/pages/: about.html  art.html  contact.html  landing.html  projects.html
public/html/partials/: album-images.html  album.html  email-form.html  project.html  song-player.html
public/scripts/: text-animation.js
public/static/: main.css
public/styles/: global.css  transitions.css
routes/: base.go
routes/data/: base.go  projects.go
src/: error.rs  hilighting.rs  main.rs  state.rs  telemetry.rs
src/auth/: error.rs  handlers.rs  middleware.rs  mod.rs  model.rs
src/database/: error.rs  handlers.rs  mod.rs  model.rs
src/email/: base.go  email_test.go
src/projects/: base.go  infos.go
src/routes/: base.go  handlers.go  middleware.go  routes.go
src/routing/: error.rs  index.rs  mod.rs  user.rs
src/songs/: handler.go  infos.go
src/views/: album_images.go  base.go  projects.go  song_infos.go
static/: behaviors._hs  main.css
templates/: 404.html  contact.html  index.html  landing.html  layout.html  videos.html
templates/admin/: update.html  upload.html
templates/blog/: layout.html  multi-post.html  post.html
templates/music/: layout.html  player.html  selection.html
templates/portfolio/: item.html  layout.html
templates/user/: base.html  login_register.html
(+26 files in other folders)
