[package]
name = "voidkandy-dot-space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["form", "json", "query", "multipart"]}
askama = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = {version= "0.3.17", features=["env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tower-http = {version = "0.5.2", features=["fs", "cors"]}
dotenv = "0.15.0"
serde = { version ="1.0.201", features = ["derive"] }
anyhow = "1.0.86"
thiserror = "1.0.61"
markdown = "1.0.0-alpha.17"
reqwest = { version = "0.12.4", features = ["json"] }
rand = "0.8.5"
syntect = "5.2.0"
html-escape = "0.2.13"
serde_json = "1.0.128"
